# jpegxs-rs

./: .editorconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  ACHIEVEMENTS.md  BRANCH_MANAGEMENT_PLAN.md  CHANGELOG.md  CLAUDE.md  CLEAN-ROOM-ROADMAP.md  CODEOWNERS  COMMERCIAL-LICENSE.md  COMMERCIALIZATION_MEMO.md  COMMERCIALIZATION_NOTICE.md  COMMERCIAL_FEATURES.md  COMMERCIAL_LICENSE.md  COMMERCIAL_REPO_TASKS.md  COMPLIANCE_REPORT.md  COMPREHENSIVE_INVESTIGATION_FINDINGS.md  CONTINUE_HERE.md  CONTINUE_HERE_NEXT_SESSION.md  CONTRIBUTING.md  CURRENT-ACHIEVEMENTS.md  CURRENT_STATUS.md  Cargo.toml  DERIVATIVE-TRACKING.md  DEVELOPMENT-SUMMARY.md  DWT_PRECISION_ANALYSIS.md  DWT_VALIDATION_REPORT.md  Dockerfile  ENTROPY_CODING_INVESTIGATION_PLAN.md  ENTROPY_INVESTIGATION_COMPLETE.md  FIX_BRANCH_SUMMARY.md  FRESH_START_GUIDE.md  FRESH_START_STATUS.md  FUTURE-IDEAS.md  HYBRID-DEVELOPMENT-GUIDE.md  IMPLEMENTATION_STATUS.md  LEGAL-NOTICE.md  LICENSE  LICENSE-APACHE  (+58 more)
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  branch-protection.md
.github/ISSUE_TEMPLATE/: bug_report.yml  commercial-license-inquiry.md  feature_request.yml
.github/workflows/: ci-optimized.yml  ci.yml  commercial-release.yml  reference-ci.yml
benches/: Cargo.toml  README.md
benches/src/: codec_comparison.rs  color_conversion.rs  lib.rs  quality_test.rs  simple_benchmark.rs
benchmark_results/: BENCHMARK_REPORT.md  benchmark_results.csv  benchmark_results.json
clean-room/: README.md
clean-room/docs/: clean-room-log.md
clean-room/jpegxs-core-clean/: CLEAN_ROOM_LOG.md
clean-room/jpegxs-core-clean/src/: dwt.rs  lib.rs
commercial/: README.md
commercial/docs/: clean-room-log.md
commercial/jpegxs-core-clean/: CLEAN_ROOM_LOG.md  Cargo.toml
commercial/jpegxs-core-clean/src/: dwt.rs  lib.rs
crates/jpegxs-cli/: Cargo.toml
crates/jpegxs-cli/src/: main.rs
crates/jpegxs-conformance/: Cargo.toml
crates/jpegxs-conformance/benches/: memory.rs  quality.rs  speed.rs
crates/jpegxs-conformance/src/: benchmarks.rs  conformance.rs  lib.rs  metrics.rs  reference.rs  test_runner.rs  test_vectors.rs
crates/jpegxs-core/: Cargo.toml
crates/jpegxs-core/examples/: apple_silicon_benchmark.rs  gpu_accuracy_test.rs  lena_gpu_test.rs  neon_benchmark.rs  real_image_gpu_test.rs
crates/jpegxs-core/src/: accel.rs  colors.rs  dwt.rs  dwt_simd.rs  dwt_validation.rs  entropy.rs  gpu_dwt.rs  lib.rs  neon_dwt.rs  packet.rs  profile.rs  quant.rs  types.rs
crates/jpegxs-core/tests/: color_precision_test.rs  dwt_isolation_test.rs  dwt_precision_test.rs  entropy_roundtrip_test.rs  pipeline_stage_analysis.rs  pixel_formats_test.rs
crates/jpegxs-ffi/: Cargo.toml
crates/jpegxs-ffi/src/: lib.rs
crates/jpegxs-io/: Cargo.toml
crates/jpegxs-io/src/: bitio.rs  bitstream.rs  lib.rs  yuv.rs
docs/: ALL_CHUNKS_LINKS.md  INDEX.md  chunk_001.md  chunk_002.md  chunk_003.md  chunk_004.md  full.md
documentation/: COMPLIANCE_GAP_ANALYSIS.md  CONFORMANCE_TESTING_PLAN.md  CONFORMANCE_TESTING_RESULTS.md  ISO_TEST_VECTORS_ACCESS.md  PUBLIC_VS_COMMERCIAL_ARCHITECTURE.md
legal/: COMPLIANCE_REPORT.md
quality_test_results/: QUALITY_TEST_REPORT.md  quality_test_results.csv  quality_test_results.json
scripts/: pre-push-check.sh
scripts/test-utils/: create_png.rs  create_test_image.rs
test-data/: create_png.rs  generate_test_image.py  test_64x64.yuv422p
test-data/analysis/: FUTURE-IDEAS.md
test-data/images/: test_light_l2.jxs
testing/analysis/: QUALITY_IMPROVEMENTS_ANALYSIS.md
testing/benchmarks/: Cargo.toml  README.md
testing/benchmarks/src/: codec_comparison.rs  quality_test.rs  simple_benchmark.rs
testing/fixtures/: test_64x64.ppm
tests/: integration_cross_impl.rs  roundtrip.rs
tools/: progress_tracker.py  test_runner.py  validate_output.py
validation-results/: test-results-2025-09-06T20-18-42.262368.json  test-results-2025-09-06T21-45-05.179741.json  test-results-2025-09-06T21-47-14.360976.json  test-results-2025-09-06T21-50-53.043978.json  test-results-2025-09-06T22-01-31.901747.json  test-results-2025-09-06T22-06-03.676334.json  test-results-2025-09-06T22-09-15.250419.json  test-results-2025-09-06T22-12-29.310695.json  test-results-2025-09-06T22-27-30.283357.json  test-results-2025-09-06T22-33-31.337576.json  test-results-2025-09-06T22-35-56.215849.json  test-results-2025-09-06T22-38-02.939631.json  test-results-2025-09-06T22-40-59.908707.json  test-results-2025-09-06T23-01-34.676570.json
