[package]
name = "jpegxs-core"
version.workspace = true
edition.workspace = true
license-file.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Core JPEG XS encoding and decoding library"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
byteorder = { workspace = true }
log = { workspace = true }
jpegxs-core-clean = { path = "../../commercial/jpegxs-core-clean" }

[dev-dependencies]
env_logger = { workspace = true }
approx = "0.5"
