[package]
name = "jpegxs-core"
version.workspace = true
edition.workspace = true
license-file.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Core JPEG XS encoding and decoding library"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
byteorder = { workspace = true }
log = { workspace = true }
jpegxs-core-clean = { path = "../../clean-room/jpegxs-core-clean" }

# Apple Silicon GPU acceleration
[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.29"
objc = "0.2"

[dev-dependencies]
env_logger = { workspace = true }
approx = "0.5"
image = { workspace = true }
