[package]
name = "jpegxs-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "FFI bindings for JPEG XS codec"

[features]
default = []
ffi_ref = []

[dependencies]
anyhow = { workspace = true }
jpegxs-core = { path = "../jpegxs-core" }

[build-dependencies]