[package]
name = "jpegxs-io"
version.workspace = true
edition.workspace = true
license-file.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "I/O utilities for JPEG XS codec"

[dependencies]
anyhow = { workspace = true }
byteorder = { workspace = true }
log = { workspace = true }

[dev-dependencies]
tempfile = "3"