[package]
name = "jpegxs-benchmarks"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "simple_benchmark"
path = "src/simple_benchmark.rs"

[[bin]]
name = "codec_comparison"
path = "src/codec_comparison.rs"

[[bin]]
name = "quality_test"
path = "src/quality_test.rs"

[dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.25"
rayon = "1.8"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
indicatif = "0.17"
tabled = "0.15"
csv = "1.3"
chrono = { version = "0.4", features = ["serde"] }

# Local dependencies
jpegxs-core = { path = "../../crates/jpegxs-core" }
jpegxs-core-clean = { path = "../../commercial/jpegxs-core-clean" }

# For comparison codecs (optional - will gracefully handle if not available)
webp = "0.3.1"
